version: documents updated with screenshots